// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductType should render the product type 1`] = `
<div>
  <div
    class="woocommerce-product-type"
  >
    <span
      class="woocommerce-product-type__label"
    >
      Product type label
    </span>
    <button
      aria-label="Learn more about recommended free business features"
      class="components-button is-tertiary"
      type="button"
    >
      <i
        aria-hidden="true"
        class="material-icons-outlined"
      >
        info
      </i>
    </button>
    
    <span
      class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
    >
      <span
        class="screen-reader-text"
      >
        This product type requires a paid extension.
We'll add this to a cart so that
you can purchase and install it later.
      </span>
      $120 per year
    </span>
  </div>
</div>
`;

exports[`ProductType should render the product type with monthly prices 1`] = `
<div>
  <div
    class="woocommerce-product-type"
  >
    <span
      class="woocommerce-product-type__label"
    >
      Product type label
    </span>
    <button
      aria-label="Learn more about recommended free business features"
      class="components-button is-tertiary"
      type="button"
    >
      <i
        aria-hidden="true"
        class="material-icons-outlined"
      >
        info
      </i>
    </button>
    
    <span
      class="woocommerce-pill css-1qmnemh-Text e15wbhsk0"
    >
      <span
        class="screen-reader-text"
      >
        This product type requires a paid extension.
We'll add this to a cart so that
you can purchase and install it later.
      </span>
      $10 per month
    </span>
  </div>
</div>
`;
